--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Release Go Binary
 on:
   release:
     types: [created]
+  workflow_dispatch: 
 
 permissions:
   contents: write
@@ -28,13 +29,13 @@ jobs:
       - name: Set Up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.23" 
+          go-version: "1.20" # Specify Go version
 
       - name: Build Go Binary
         run: |
-          GOOS=darwin GOARCH=amd64 go build -o file-encryptor-darwin-amd64 ./cmd/file-encryptor
-          
-      - name: Upload Binaries
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o file-encryptor-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/file-encryptor
+
+      - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
         with:
           files: |
