--- a/.github/workflows/go2.yml
+++ b/.github/workflows/go2.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         go-version: ["1.20", "1.21", "1.22", "1.23"]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
