--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: ["1.20", "1.21", "1.22", "1.23", "1.24"]
+        go-version: ["1.22", "1.23", "1.24"]
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
 
